--- a/journal/202207.md
+++ b/journal/202207.md
@@ -129,8 +129,8 @@ ticketvote:
 
 - Implemented the ticketvote plugin [Fsck function](https://github.com/decred/politeia/pull/1659). This function rebuilds all of the ticketvote plugin caches.
 - Rewrote the runoff vote [submissions cache](https://github.com/decred/politeia/pull/1658) and moved it from the file system to the tstore provided plugin cache.
-- Moved the [vote summaries](https://github.com/decred/politeia/pull/1657) cache from the file system to the tstore provided plugin cache that is backed by the tstore databse.
-- Rewrote ticketvote [inventory cache](https://github.com/decred/politeia/pull/1649) with an improved API, better documentation, and was moved off of the file system andinto the tstore database.
+- Moved the [vote summaries](https://github.com/decred/politeia/pull/1657) cache from the file system to the tstore provided plugin cache.
+- Rewrote ticketvote [inventory cache](https://github.com/decred/politeia/pull/1649) with an improved API, better documentation, and moved it into the tstore database.
 - Added the [timestamp](https://github.com/decred/politeia/pull/1653) of the vote status change to the vote summary structure.
 
 - Fixed bug where empty comments were accepted.
@@ -224,7 +224,7 @@ _[dcrdata](https://github.com/decred/dcrdata) is an explorer for Decred blockcha
 
 { _Check https://github.com/decred/dcrdata/commits/master ._}
 
-- Added a [verify message](https://github.com/decred/dcrdata/pull/1911) feature to dcrdata. Along with a [Request Body Limiter](https://github.com/decred/dcrdata/commit/c9d07773f51cc93186d6c4d1c1f74f8c170f297d) of 2MiB, down from 10MiB default.
+- Added a [verify message](https://github.com/decred/dcrdata/pull/1911) feature to dcrdata, along with a [Request Body Limiter](https://github.com/decred/dcrdata/commit/c9d07773f51cc93186d6c4d1c1f74f8c170f297d) of 2MiB, down from 10MiB default.
 
 In Progress:
 
