Dev dcrwallet simplify

--- a/journal/202207.md
+++ b/journal/202207.md
@@ -75,18 +75,17 @@ _[dcrwallet](https://github.com/decred/dcrwallet) is a wallet server used by com
 
 { _Check https://github.com/decred/dcrwallet/commits/master ._}
 
-Rpcserver:
+JSON-RPC:
 
-- Now [allows](https://github.com/decred/dcrwallet/pull/2173) 'signrawtransasction' private keys. This resolves a problem whereby it did not account for the fact that p2pk addresses no longer automatically convert their stringized output to p2pkh addresses.
+- Fixed `signrawtransasction` command not seeing the provided [private keys](https://github.com/decred/dcrwallet/pull/2173) for signing P2PKH inputs.
 
 Ticketbuyer:
 
-- Does not attempt to [mix change](https://github.com/decred/dcrwallet/pull/2171) if CoinShuffle++ server is unset. 
+- Do not attempt to [mix change](https://github.com/decred/dcrwallet/pull/2171) if CoinShuffle++ server is unset. 
 
-In Progress:
+In progress:
 
-- Add 'TSpendPolicies' and 'SetTSpendPolicy' requests. This will allow Decrediton to now get and update the [pending TSpend policies](https://github.com/decred/dcrwallet/pull/2172).
-
+- Add requests to allow Decrediton to get and update the [pending TSpend voting policies](https://github.com/decred/dcrwallet/pull/2172).
 
 
 ### Decrediton
