Dev Decrediton tweak wording

--- a/journal/202207.md
+++ b/journal/202207.md
@@ -94,17 +94,19 @@ _[Decrediton](https://github.com/decred/decrediton) is a full-featured desktop w
 
 { _Check https://github.com/decred/decrediton/commits/master ._}
 
-In Progress: 
+In progress:
 
-[TSpend voting is being introduced](https://github.com/decred/decrediton/pull/3787) into Decredition. {image candidate}
+[Voting on individual TSpend transactions](https://github.com/decred/decrediton/pull/3787) is being introduced into Decredition:
 
-- The Treasury Spending tab will display pending tspends and the ability to vote.
-- Adds notification of the new active and not yet voted tspend to the home view.
-- Adds the treasury/tspends votes that have been set on vsp to the ticket details header.
- 
-DEX Tab:
+- The Treasury Spending tab will display pending TSpends and the ability to vote.
+- On the Home view users will see notifications of new active and not yet voted TSpends.
+- Ticket details page will show treasury key and TSpend vote choices that have been set on the VSP.
 
-- Add the ability to [refresh](https://github.com/decred/decrediton/pull/3785) the DEX window with F5 key.
+DEX tab:
+
+- Add the ability to [refresh](https://github.com/decred/decrediton/pull/3785) the DEX window with F5 key. { _merged Aug 1, move to Aug_ }
+
+{ image candidates: 3787 }
 
 
 ### Politeia
