Dev Pi backend improve explainers, add todos

--- a/journal/202207.md
+++ b/journal/202207.md
@@ -123,30 +123,36 @@ _[Politeia](https://github.com/decred/politeia) is Decred's proposal system. It 
 
 tstore:
 
-- Improved blobs [not found error](https://github.com/decred/politeia/pull/1663). Previously, the keys that were not found were being included in the error message. This made the error message illegible when a large number of keys were being requested, like when all of a proposal's cast votes are being requested.
-- Updated the tstore backend to allow for [overwrites](https://github.com/decred/politeia/pull/1652) when using the Put() method.
+- Removed ability to [use LevelDB](https://github.com/decred/politeia/pull/1651) as a key-value storage for tstore, which is now done by MySQL by default. Since MySQL is required by Trillian anyway, removing an alternative storage backend simplifies politeiad setup and makes the code easier to maintain.
+- Improved blobs [not found error](https://github.com/decred/politeia/pull/1663). Previously, the keys that were not found were being included in the error message. This made the error message illegible when a large number of keys were being requested, like when all of a proposal's cast votes are being requested. { _small, merge with Other_ }
+- Updated the tstore backend to allow [overwriting](https://github.com/decred/politeia/pull/1652) existing entries. tstore saves data in 2 steps: save data in the key-value store, and then append its hash onto the Trillian tree. Overwriting existing entries fixes the inability to resubmit unchanged data if the second step failed.
 
 legacypoliteia:
 
-- Added [additional error handling](https://github.com/decred/politeia/pull/1665) for when Trillian edge case unexpectedly fails, allowing the import command to continue without also failing.
-- Added an 'import' [command](https://github.com/decred/politeia/pull/1632) to the legacypoliteia tool.  The import command imports the JSON data into the tstore backend that was saved to disk during the execution of the convert command.
+- Added [additional error handling](https://github.com/decred/politeia/pull/1665) for when Trillian edge case unexpectedly fails, allowing the import command to continue without also failing. { _merge with import tool coverage_ }
+- Added an [`import` command](https://github.com/decred/politeia/pull/1632) to the legacypoliteia tool. It imports the JSON data into the tstore backend that was generated during the execution of the `convert` command. The two commands (`convert` and `import`) allow to migrate most data from the previous version of Politeia into the current version. Client and server signatures are not imported since they don't match the converted data. Some Trillian weirdness had to be investigated and addressed with extensive testing and workarounds.
 
 politeiawww:
 
-- Removed [legacy websockets](https://github.com/decred/politeia/pull/1660).
+- Removed [legacy websockets code](https://github.com/decred/politeia/pull/1660) which was never used for anything. { _merge with Other since it's just 1 item an it's not obvious what "politeiawww" is _ }
 
-ticketvote:
+`ticketvote` plugin:
 
-- Implemented the ticketvote plugin [Fsck function](https://github.com/decred/politeia/pull/1659). This function rebuilds all of the ticketvote plugin caches.
+- Implemented the ticketvote plugin's [fsck function](https://github.com/decred/politeia/pull/1659) that rebuilds all of its caches.
 - Rewrote the runoff vote [submissions cache](https://github.com/decred/politeia/pull/1658) and moved it from the file system to the tstore provided plugin cache.
-- Moved the [vote summaries](https://github.com/decred/politeia/pull/1657) cache from the file system to the tstore provided plugin cache.
-- Rewrote ticketvote [inventory cache](https://github.com/decred/politeia/pull/1649) with an improved API, better documentation, and moved it into the tstore database.
-- Added the [timestamp](https://github.com/decred/politeia/pull/1653) of the vote status change to the vote summary structure.
+- Moved the [vote summaries cache](https://github.com/decred/politeia/pull/1657) from the file system to the tstore provided plugin cache.
+- Rewrote ticketvote [inventory cache](https://github.com/decred/politeia/pull/1649) with an improved API, better documentation, and saving data in the tstore database instead of the file system. { _maybe group with similar changes moving fs to tstore cache_ }
+- Added the [timestamp](https://github.com/decred/politeia/pull/1653) of the last vote status change to the vote summary structure. This allows to pull less data when rebuilding the vote inventory.
 
-- Fixed bug where empty comments were accepted.
-- Consolidated [config error](https://github.com/decred/politeia/pull/1648) reporting.
-- 3 instances of code cleanup and packaging.
-- Various improvements, tweaking etc
+Other backend changes:
+
+- Fixed bug where [empty comments](https://github.com/decred/politeia/pull/1655) were accepted.
+- Code cleanup and packaging. { 1651 - added own bullet, 1656, 1662, 1661, 1666; drop after review}
+- Various improvements, tweaking etc.
+
+politeaivoter command-line app:
+
+- Consolidated [config error handling](https://github.com/decred/politeia/pull/1648) to cover more cases consistently.
 
 Politeia GUI:
 
