Dev Pi GUI add legacy coverage and todos

--- a/journal/202207.md
+++ b/journal/202207.md
@@ -156,13 +156,18 @@ politeaivoter command-line app:
 
 Politeia GUI:
 
-- Added a 'politeiagui-scripts' [CLI package](https://github.com/decred/politeiagui/pull/2827).  It adds 7 scripts used through the politeiagui plugins.
-- Fixed [loop](https://github.com/decred/politeiagui/pull/2819) on proposal details page.
-- Fixed RFP submissions [ctrl+click bug](https://github.com/decred/politeiagui/pull/2817).
-- Fixed proposal [edit button alignment](https://github.com/decred/politeiagui/pull/2822).
-- Plugins can now [export pluggable](https://github.com/decred/politeiagui/pull/2800) 'effects' that can be used inside a 'listener effect' to do whatever the plugin wants. This way we can reduce the overhead to create integrations.
-- Show modal for [markdown eternal links](https://github.com/decred/politeiagui/pull/2804).
-- Various tweaks, fixes, improvements.
+- Removed hardcoded [legacy proposals](https://github.com/decred/politeiagui/pull/2762) and code handling them, now that they have been migrated into the current Politeia database.
+- Fixed [loop](https://github.com/decred/politeiagui/pull/2819) on proposal details page. { _merge in Fixes counter_ }
+- Fixed RFP submissions [ctrl+click bug](https://github.com/decred/politeiagui/pull/2817). { _merge in Fixes counter_ }
+- Fixed proposal [edit button alignment](https://github.com/decred/politeiagui/pull/2822). { _merge in Fixes counter_ }
+- Various tweaks and improvements. { 2805 2813 2832x3 ; drop after review }
+- Fixes { 2811 2832x4; drop after review }
+
+Politeia GUI, towards the new [plugin architecture](https://github.com/decred/politeiagui/tree/master/plugins-structure#politeiagui---plugins-structure):
+
+- Added a `politeiagui-scripts` [CLI package](https://github.com/decred/politeiagui/pull/2827). It deduplicates common configuration and provides 7 commands for developing and testing plugins and apps.
+- Each plugin can now [export "effects"](https://github.com/decred/politeiagui/pull/2800) that developers can reuse and compose in their Politeia-like apps. For example, when the user scrolls to the end of the list, code to fetch next batch of proposals/comments/vote summaries can be called from the plugins responsible for these pluggable features.
+- Show a warning modal for [external links](https://github.com/decred/politeiagui/pull/2804).
 
 
 ### cspp
