Added Markets, still need DEX

--- a/journal/202207.md
+++ b/journal/202207.md
@@ -464,9 +464,7 @@ Selected Twitter discussions:
 
 ## Markets
 
-In July DCR was trading between USD {n.nn}-{n.nn} / BTC {n.nnnnn}-{n.nnnnn}. The average daily rate was ${n.nn}.
-
-{ _Optional: Markets overview, USD and BTC price trends, highs and lows, interesting events, interesting analysis._ }
+In July DCR was trading between USD 20.86-29.10 / BTC 0.001037-0.001342. The average daily rate was $23.93.
 
 { _DCRDEX updates, esp. trading volume dynamics._ }
 
