Dev dcrdata tweaks

--- a/journal/202207.md
+++ b/journal/202207.md
@@ -249,11 +249,14 @@ _[dcrdata](https://github.com/decred/dcrdata) is an explorer for Decred blockcha
 
 { _Check https://github.com/decred/dcrdata/commits/master ._}
 
-- Added a [verify message](https://github.com/decred/dcrdata/pull/1911) feature to dcrdata, along with a [Request Body Limiter](https://github.com/decred/dcrdata/commit/c9d07773f51cc93186d6c4d1c1f74f8c170f297d) of 2MiB, down from 10MiB default.
+- Added [message signature verification](https://github.com/decred/dcrdata/pull/1911) page and two new HTTP API endpoints for use in scripts and apps. [Request body limiter](https://github.com/decred/dcrdata/commit/c9d07773f51cc93186d6c4d1c1f74f8c170f297d) was also added with a default of 2 MiB, down from default 10 MiB.
 
-In Progress:
+In progress:
 
+- Expose more [treasury mechanics](https://github.com/decred/dcrdata/pull/1918) like quorum progress, approx. vote start/end date, Pi keys used, and more.
 - Devs are looking into [pagination problems](https://github.com/decred/dcrdata/issues/1925) on the Treasury page.
+
+{ image candidates: 1911 }
 
 
 ### TinyDecred
