--- a/journal/202207.md
+++ b/journal/202207.md
@@ -369,10 +369,9 @@ Two new VSPs were listed on decred.org and in Decrediton: [vspd.bass.cf](https:/
 
 [jz says](https://matrix.to/#/!lDZCzVQjFoJsXMPkvr:decred.org/$XSPP3KlRoIcNt3cqBG9ZbgTnwu88Kr6VcwPDTNEGZo4?via=decred.org&via=matrix.org&via=planetdecred.org) Binance has finally reduced required DCR confs from 20 to 6.
 
+{ investigate if its worth coverage https://twitter.com/NOWNodes/status/1534180320601378821 }
 
-{ _Check https://github.com/decred/dcrwebapi/commits/master for changes to the VSP list._ }
-
-{ _Check https://github.com/decred/dcrwebapi/pulls for new VSPs under review._ }
+{ write up BisonPool from https://matrix.to/#/!teQafvHMYpIbqLIieU:decred.org/$ptSvAwvIBtjXc69oaRvEdAvNBnazPDHlg9OipC64g6w }
 
 { _Check #ecosystem room for news._ }
 
