--- a/journal/202207.md
+++ b/journal/202207.md
@@ -265,7 +265,7 @@ _[dcrweb](https://github.com/decred/dcrweb) is the source code for the decred.or
 
 { _Check https://github.com/decred/dcrweb/commits/master ._}
 
-- Social Media links were [cleaned up](https://github.com/decred/dcrweb/pull/1052). Notably, Chinese specific social media has been removed due to a lack of control and proper moderation over these channels.
+- [Social Media](https://decred.org/community/) links were [cleaned up](https://github.com/decred/dcrweb/pull/1052). Notably, Chinese specific social media has been removed due to a lack of control and proper moderation over these channels.
 
 { _Check for other new/updated repos in:_
 
