add network stats

--- a/journal/202207.md
+++ b/journal/202207.md
@@ -338,35 +338,25 @@ There were no new proposals in July. The Decred Magazine [proposal](https://prop
 
 ## Network
 
-{ _Hint: "Network" tracks key "health" metrics of the fundamental infrastructure._ }
+**Hashrate**: July's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=l4vb70eb-l6cmn0q7&scale=linear&bin=block&axis=time) opened at ~87 Ph/s and closed ~44 Ph/s, bottoming at 28 Ph/s and peaking at 116 Ph/s throughout the month.
 
-{ _Hint: n, n.n, and n.nn tell how many decimals to keep, e.g. 100, 16.5, 8.63_ }
+Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Aug 9: Poolin 55%, F2pool 22%, ViaBTC 11%, Pool.BTC 7%, Antpool 4%.
 
-**Hashrate**: July's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=block&axis=time) {_set zoom to show the month_} opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month.
+Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by Aug 9: Poolin 42%, ViaBtTC 24%, Unknown 21%, BTC.com 11%, Coinmine.pl 1%.
 
-Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on {date}: {PoolName n%, ...}.
+**Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom=l4trh6hx-l6bmskup&bin=window&axis=time&visibility=true-true) varied between 215-238 DCR, with 30-day [average](https://dcrstats.com/) at 226.8 DCR (+3.1). 
 
-{ _Hint: Fallback link for pool distribution: https://dcrstats.com/pow ._ }
-
-Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by {date}: {PoolName n%, ...}.
-
-**Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&axis=time&visibility=true-true&mode=stepped) {_monthly zoom_} varied between {n}-{n} DCR, with 30-day [average](https://dcrstats.com/) at {n.n} DCR (+{n.n}). { use same t1-t2 for zoom }
-
-The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&scale=linear&bin=block&axis=time) {_monthly zoom_} was {n.nn}-{n.nn} million DCR, meaning that {n.n}-{n.n}% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&scale=linear&bin=block&axis=time) {_monthly zoom_} in Proof of Stake.
-
-{ _Add a recap of ticket price action if it was interesting._ }
+The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=l4tvr4uc-l6g3g3s8&scale=linear&bin=block&axis=time) was 9.12-9.25 million DCR, meaning that 63.7-64.5% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=l4vea1fj-l6cpugkz&scale=linear&bin=block&axis=time) in Proof of Stake.
 
 **VSP**: On {date}, ~{n} (+{n}) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers. Collectively the {n} VSPs managed {n.n}% of the ticket pool (+{n.n}%).
 
 **Nodes**: Throughout July there were around {n} reachable nodes according to [PD Analytics](https://analytics.planetdecred.org/nodes).
 
-Node versions captured by [Decred Mapper](https://nodes.jholdstock.uk/user_agents) on {date} ({n} total, dcrd only): v{} - {n}%, ...
+Node versions captured by [Decred Mapper](https://nodes.jholdstock.uk/user_agents) on Aug 9 (127 total, dcrd only): v1.7.1–39%, v1.7.2–25%, v1.7.0–11%, v1.7.0 dev builds — 7%, v1.8.0 dev builds — 4%, v1.6 series — 3%, v1.5 series — 0.7%, v1.4 series — 0.7%.
 
-{ _Optional_ } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between {n.n}-{n.n}%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) {_monthly zoom_} varied between {n}-{n}K DCR.
+The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=l3k506xy-l6ds5djq&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 60.6-60.8%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&zoom=l4pct44v-l6ik5xc0&bin=day&axis=time&visibility=true-false) varied between 244,281-508,955 DCR.
 
-{ _Optional_ } Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen {} nodes (+{}), {} channels (+{}) with a total capacity of {n.n} DCR (+{n.n}), as of {date}.
-
-{ _Add any interesting analysis or events in the network._ }
+Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen 45 nodes (+1), 78 channels (+6) with a total capacity of 36.9 DCR (+0.2), as of Aug 9.
 
 
 ## Ecosystem
