--- a/journal/202207.md
+++ b/journal/202207.md
@@ -85,10 +85,6 @@ In progress - [voting on individual TSpend transactions](https://github.com/decr
 - On the Home view users will see notifications of new active and not yet voted TSpends.
 - Ticket details page will show treasury key and TSpend vote choices that have been set on the VSP.
 
-DEX tab:
-
-- Add the ability to [refresh](https://github.com/decred/decrediton/pull/3785) the DEX window with F5 key. { _merged Aug 1, move to Aug_ }
-
 { image candidates: 3787 }
 
 
@@ -99,19 +95,13 @@ _[Politeia](https://github.com/decred/politeia) is Decred's proposal system. It 
 Backend - tstore:
 
 - Removed ability to [use LevelDB](https://github.com/decred/politeia/pull/1651) as a key-value storage for tstore, which is now MySQL by default. Since MySQL is required by Trillian anyway, removing an alternative storage backend simplifies politeiad setup and makes the code easier to maintain.
-- Improved blobs [not found error](https://github.com/decred/politeia/pull/1663). Previously, the keys that were not found were being included in the error message. This made the error message illegible when a large number of keys were being requested, like when all of a proposal's cast votes are being requested. { _small, merge with Other_ }
 - Updated the tstore backend to allow [overwriting](https://github.com/decred/politeia/pull/1652) existing entries. tstore saves data in 2 steps: save data in the key-value store, and then append its hash onto the Trillian tree. Overwriting existing entries fixes the inability to resubmit unchanged data if the second step failed.
 
 Backend - legacy proposals:
 
-- Added [additional error handling](https://github.com/decred/politeia/pull/1665) for when Trillian edge case unexpectedly fails, allowing the import command to continue without also failing. { _merge with import tool coverage_ }
 - Added an [`import` command](https://github.com/decred/politeia/pull/1632) to the legacypoliteia tool. It imports the JSON data into the tstore backend that was generated during the execution of the `convert` command. The two commands (`convert` and `import`) allow to migrate most data from the previous version of Politeia into the current version. Client and server signatures are not imported since they don't match the converted data. Some Trillian weirdness had to be investigated and addressed with extensive testing and workarounds.
 
-Backend - politeiawww:
-
-- Removed [legacy websockets code](https://github.com/decred/politeia/pull/1660) which was never used for anything. { _merge with Other since it's just 1 item an it's not obvious what "politeiawww" is _ }
-
-`ticketvote` plugin:
+Backend - `ticketvote` plugin:
 
 - Implemented the ticketvote plugin's [fsck function](https://github.com/decred/politeia/pull/1659) that rebuilds all of its caches.
 - Rewrote the runoff vote [submissions cache](https://github.com/decred/politeia/pull/1658) and moved it from the file system to the tstore provided plugin cache.
@@ -122,6 +112,7 @@ Backend - politeiawww:
 Backend - other changes:
 
 - Fixed bug where [empty comments](https://github.com/decred/politeia/pull/1655) were accepted.
+- Removed [legacy websockets code](https://github.com/decred/politeia/pull/1660) which was never used for anything.
 - Code cleanup and packaging. { 1656, 1662, 1661, 1666; drop after review}
 - Various improvements, tweaking etc.
 
@@ -132,11 +123,8 @@ politeaivoter command-line app:
 Politeia GUI:
 
 - Removed hardcoded [legacy proposals](https://github.com/decred/politeiagui/pull/2762) and code handling them, now that they have been migrated into the current Politeia database.
-- Fixed [loop](https://github.com/decred/politeiagui/pull/2819) on proposal details page. { _merge in Fixes counter_ }
-- Fixed RFP submissions [ctrl+click bug](https://github.com/decred/politeiagui/pull/2817). { _merge in Fixes counter_ }
-- Fixed proposal [edit button alignment](https://github.com/decred/politeiagui/pull/2822). { _merge in Fixes counter_ }
 - Various tweaks and improvements. { 2805 2813 2832x3 ; drop after review }
-- Fixes { 2811 2832x4; drop after review }
+- Fixes { 2819 2817 2822 2811 2832x4; some may be unreleased bugs while the plugin arch was shaping up; drop after review }
 
 Politeia GUI progress towards the new [plugin architecture](https://github.com/decred/politeiagui/tree/master/plugins-structure#politeiagui---plugins-structure):
 
@@ -163,10 +151,8 @@ _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecti
 - Added a short delay for [sending ZEC](https://github.com/zcash/zcash/issues/6045) after a block is mined in load tests, to workaround an issue with Zcash [output selection](https://github.com/zcash/zcash/issues/6045).
 - Clarified the message about [disabling a DEX server](https://github.com/decred/dcrdex/pull/1634). With the recent account discovery features, a server can be disabled and reenabled as needed without paying the registration fee again.
 - Fixed native BTC SPV wallet getting wrecked after [sending too small](https://github.com/decred/dcrdex/pull/1705) ("dust") amount, which should not be allowed.
-- Enforced [code formatting](https://github.com/decred/dcrdex/pull/1699) check in CI builds for consistency. { _small, maybe merge_ }
+- Enforced [code formatting](https://github.com/decred/dcrdex/pull/1699) check during CI builds for consistency.
 - Increase ETH [gas fee cap](https://github.com/decred/dcrdex/pull/1692) for redemptions when base fee is too high.
-- Parse additional [options](https://github.com/decred/dcrdex/pull/1694) on `TradeForm`. { _not sure what it does, maybe just merge into "other improvements"_ }
-- Fixed search box [layout](https://github.com/decred/dcrdex/pull/1704) on Markets page. { _small, merge_ }
 - Added ability to [export ETH wallet](https://github.com/decred/dcrdex/pull/1648) to Metamask.
 - Fixed block monitoring for DCR SPV wallets and improved [connectivity error messages](https://github.com/decred/dcrdex/pull/1701).
 - Fixed [Filled percentage](https://github.com/decred/dcrdex/pull/1711) display for market buys.
@@ -181,7 +167,7 @@ _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecti
 - Added a test for [arithmetic overflow](https://github.com/decred/dcrdex/pull/1722) in the Ethereum's Solidity contract. Starting with Solidity v0.8.0 the transaction _should_ be reverted automatically if there is an overflow. The test is added just in case Solidity version used in DCRDEX is somehow reduced below v0.8.0, or if future Solidity versions remove this protection. However unlikely that may be, it's better to be safe than sorry.
 
 - Testing improvements { 1691 1743 1745 }
-- Other improvements { 1709 1723 } and fixes { 1713 1729 1746 1740 }
+- Other improvements { 1694 1709 1723 } and fixes { 1704 1713 1729 1746 1740 }
 
 { image candidates: 1648 1600 1607  }
 
