--- a/journal/202207.md
+++ b/journal/202207.md
@@ -330,7 +330,7 @@ Monde PR’s achievements:
 Secured the following news articles:
 
 - An article in [Finder](https://www.finder.com/id/ethereum-eth-price-prediction) featuring commentary from @jz on Ethereum’s outlook for 2022
-- An article in [Finder](https://www.finder.com.au/solana-sol-price-prediction featuring commentary from @jz on Solana’s outlook for 2022 
+- An article in [Finder](https://www.finder.com.au/solana-sol-price-prediction) featuring commentary from @jz on Solana’s outlook for 2022 
 - An article in [Finder](https://www.finder.com/nz/litecoin-ltc-price-prediction) featuring commentary from @jz on Litecoin’s outlook for 2022
 - An article in [Finder](https://www.finder.com/id/dogecoin-doge-price-prediction) featuring commentary from @jz on Dogecoin’s outlook for 2022
 - An article in [Cointelegraph](https://cointelegraph.com/news/3ac-a-10b-hedge-fund-gone-bust-with-founders-on-the-run) featuring commentary from @jz on what led to the downfall of Three Arrows Capital. The article was syndicated to 44 publications including [Crypto News Canada](https://cryptonewscanada.com/3ac-a-10b-hedge-fund-gone-bust-with-founders-on-the-run/), [The Switzerland Times](https://www.theswitzerlandtimes.com/3ac-a-10-billion-hedge-fund-goes-bankrupt-with-founders-on-the-run/) and [Bitcoin Insider](https://www.bitcoininsider.org/article/176949/3ac-10b-hedge-fund-gone-bust-founders-run). 
