People add stats

--- a/journal/202207.md
+++ b/journal/202207.md
@@ -244,17 +244,14 @@ Welcome to new first-time contributors with code merged to master:
 
 { _Interviews with contributors. Link to #media for generic references (e.g. "Check the 3 interviews with devs") or link directly when referencing a specific interview._ }
 
-Community stats as of {date} (compared to {date}):
+Community stats as of Aug 1 (compared to Jul 1):
 
-- Politeia users: {} (+{})
-- [Twitter](https://twitter.com/decredproject) followers: {} (+{})
-- [Reddit](https://www.reddit.com/r/decred/) subscribers: {} (+{})
-- [Matrix](https://chat.decred.org/) #general users: {} (+{})
-- [Discord](https://discord.gg/GJ2GXfz) users: {} (+{})
-- [Telegram](https://t.me/Decred) users: {} (+{})
-- [YouTube](https://www.youtube.com/decredchannel) subscribers: {} (+{}), views: {} (+{})
-
-{ _Optional: List/link notable SM dynamics._ }
+- [Twitter](https://twitter.com/decredproject) followers: 54,306 (-74)
+- [Reddit](https://www.reddit.com/r/decred/) subscribers: 12,633 (-3)
+- [Matrix](https://chat.decred.org/) #general users: 707 (+18)
+- [Discord](https://discord.gg/GJ2GXfz) users: 1,765 (-561 - purged inactive users)
+- [Telegram](https://t.me/Decred) users: 2,773 (-37)
+- [YouTube](https://www.youtube.com/decredchannel) subscribers: 4,630 (+0), views: 212K (+2K)
 
 
 ## Governance
