People add new DCCs

--- a/journal/202207.md
+++ b/journal/202207.md
@@ -236,7 +236,10 @@ Welcome to new first-time contributors with code merged to master:
 
 { _Discover and greet new non-developer contributors too._ }
 
-{ _Check CMS, remove if none._ } Congratulations to new contractors granted the Decred Contractor Clearance (DCC): [{@handle}]({link to most relevant account}).
+Congratulations to new contractors granted the Decred Contractor Clearance (DCC) in May-June:
+
+- @philemon (GitHub [@ukane-philemon](https://github.com/ukane-philemon), Development)
+- @zippycorners (GitHub [@matthawkins90](https://github.com/matthawkins90), Development)
 
 { _Welcome new corporate contractors with short intros._ }
 
