--- a/journal/202207.md
+++ b/journal/202207.md
@@ -284,7 +284,7 @@ Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/dec
 
 The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=l4tvr4uc-l6g3g3s8&scale=linear&bin=block&axis=time) was 9.12-9.25 million DCR, meaning that 63.7-64.5% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=l4vea1fj-l6cpugkz&scale=linear&bin=block&axis=time) in Proof of Stake.
 
-**VSP**: On {date}, ~{n} (+{n}) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers. Collectively the {n} VSPs managed {n.n}% of the ticket pool (+{n.n}%).
+**VSP**: On Aug 1, ~7,170 (+20) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers. Collectively the 18 VSPs managed 17.4% of the ticket pool (+0.1%).
 
 **Nodes**: Throughout July there were around {n} reachable nodes according to [PD Analytics](https://analytics.planetdecred.org/nodes).
 
