add decred magazine

--- a/journal/202207.md
+++ b/journal/202207.md
@@ -362,6 +362,14 @@ Secured the following news articles:
 
 - {}
 
+**Decred Magazine**
+
+- [Indecision, doubt, and a monthly dose of hopium](https://www.decredmagazine.com/indecision-doubt-and-a-monthly-dose-of-hopium/) Technical Analysis by @Applesaucesome
+- [Sound Money that Iterates and Evolves](https://www.decredmagazine.com/decred-iterates-where-bitcoin-is-weak-broken/) by @RonnieAmato
+- [Introducing Decred Developer @dreacot](https://www.decredmagazine.com/introducing-decred-developer-dreacot/) Interview by @PhoenixGreen
+- [Introducing Decred Developer](https://www.decredmagazine.com/introducing-decred-developer-victorguedes/) VictorGuedes Interview by @PhoenixGreen
+- [Magic 8 ball, is this the bottom?](https://www.decredmagazine.com/magic-8-ball-is-this-the-bottom/) Technical Analysis by @Applesaucesome
+
 **Videos:**
 
 { _Scan https://www.youtube.com/results?search_query=decred&sp=CAI%253D ._ }
@@ -374,13 +382,9 @@ Livestream:
 
 - [Two-tiered Economy - Decred and the State of the Market with Jake Yocom-Piatt](https://youtu.be/1RBBNnrPqc0) 
 
-**Audio:**
-
-- {}
-
 **Art and fun:**
 
-- {}
+- [Decred stairs to evolve and adapt](https://www.decredmagazine.com/decred-stairs-to-evolve-and-adapt/) by @OfficialCryptos
 
 **Translations:**
 
