--- a/journal/202207.md
+++ b/journal/202207.md
@@ -367,7 +367,7 @@ Secured the following news articles:
 - [Indecision, doubt, and a monthly dose of hopium](https://www.decredmagazine.com/indecision-doubt-and-a-monthly-dose-of-hopium/) Technical Analysis by @Applesaucesome
 - [Sound Money that Iterates and Evolves](https://www.decredmagazine.com/decred-iterates-where-bitcoin-is-weak-broken/) by @RonnieAmato
 - [Introducing Decred Developer @dreacot](https://www.decredmagazine.com/introducing-decred-developer-dreacot/) Interview by @PhoenixGreen
-- [Introducing Decred Developer](https://www.decredmagazine.com/introducing-decred-developer-victorguedes/) VictorGuedes Interview by @PhoenixGreen
+- [Introducing Decred Developer @VictorGuedes](https://www.decredmagazine.com/introducing-decred-developer-victorguedes/) Interview by @PhoenixGreen
 - [Magic 8 ball, is this the bottom?](https://www.decredmagazine.com/magic-8-ball-is-this-the-bottom/) Technical Analysis by @Applesaucesome
 
 **Videos:**
