Net use hashrate data for Aug 1
I forgot to notify that I have the data. Sorry about wasted work here.

--- a/journal/202207.md
+++ b/journal/202207.md
@@ -276,9 +276,9 @@ There were no new proposals in July. The Decred Magazine [proposal](https://prop
 
 **Hashrate**: July's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=l4vb70eb-l6cmn0q7&scale=linear&bin=block&axis=time) opened at ~87 Ph/s and closed ~44 Ph/s, bottoming at 28 Ph/s and peaking at 116 Ph/s throughout the month.
 
-Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Aug 9: Poolin 55%, F2pool 22%, ViaBTC 11%, Pool.BTC 7%, Antpool 4%.
+Distribution of 42 Ph/s hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Aug 1: Poolin 36%, ViaBTC 36%, F2Pool 13%, BTC.com 9%, AntPool 6%, CoinMine 1%.
 
-Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by Aug 9: Poolin 42%, ViaBtTC 24%, Unknown 21%, BTC.com 11%, Coinmine.pl 1%.
+Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by Aug 1: Poolin 42%, ViaBTC 30%, BTC.com 8%, CoinMine 1%, unknown 19%.
 
 **Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom=l4trh6hx-l6bmskup&bin=window&axis=time&visibility=true-true) varied between 215-238 DCR, with 30-day [average](https://dcrstats.com/) at 226.8 DCR (+3.1). 
 
