Net add charts from bochinchero

--- a/journal/202207.md
+++ b/journal/202207.md
@@ -264,6 +264,10 @@ There were no new proposals in July. The Decred Magazine [proposal](https://prop
 
 **Hashrate**: July's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=l4vb70eb-l6cmn0q7&scale=linear&bin=block&axis=time) opened at ~87 Ph/s and closed ~44 Ph/s, bottoming at 28 Ph/s and peaking at 116 Ph/s throughout the month.
 
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-07/700/Network_Daily_Hashrate.png)
+
+_Image: Hashrate continues to seek the new equilibrium. { upl img }_
+
 Distribution of 42 Ph/s hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Aug 1: Poolin 36%, ViaBTC 36%, F2Pool 13%, BTC.com 9%, AntPool 6%, CoinMine 1%.
 
 Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by Aug 1: Poolin 42%, ViaBTC 30%, BTC.com 8%, CoinMine 1%, unknown 19%.
@@ -273,6 +277,10 @@ Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/dec
 The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=l4tvr4uc-l6g3g3s8&scale=linear&bin=block&axis=time) was 9.12-9.25 million DCR, meaning that 63.7-64.5% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=l4vea1fj-l6cpugkz&scale=linear&bin=block&axis=time) in Proof of Stake.
 
 **VSP**: On Aug 1, ~7,170 (+20) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers. Collectively the 18 VSPs managed 17.4% of the ticket pool (+0.1%).
+
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-07/700/Voting%20Service%20Provider%20(VSP)%20-%20Live%20Ticket%20Distribution.png)
+
+_Image: Distribution of tickets managed by VSPs. { upl img }_
 
 **Nodes**: Throughout July there were around {n} reachable nodes according to [PD Analytics](https://analytics.planetdecred.org/nodes).
 
