--- a/journal/202207.md
+++ b/journal/202207.md
@@ -303,7 +303,7 @@ Two new VSPs were listed on decred.org and in Decrediton: [vspd.bass.cf](https:/
 
 [BisonPool](https://bisonpool.org/) has officially launched. BisonPool is a new kind of proof-of-stake pool which enables all Decred holders to earn PoS rewards, even if they cannot afford a whole ticket on their own. To make this possible, BisonPool pools user's DCR to purchase tickets. The ticket rewards are split among participants based on the amount of DCR they were able to provide. See the [announcement on Reddit](https://www.reddit.com/r/decred/comments/vyydm1/bisonpool_is_now_live/).
 
-Users have no control over voting prefernces for their tickets.
+Users have no control over voting preferences for their tickets on BisonPool.
 
 It should be noted that this is a custodial service, meaning Bisonpool has control of user's funds. There is a risk that your Decred can be stolen if you choose to use this service. Remember, not your keys, not your coins. 
 
