--- a/journal/202207.md
+++ b/journal/202207.md
@@ -297,9 +297,7 @@ Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen 45 nodes (+
 
 Two new VSPs were listed on decred.org and in Decrediton: [vspd.bass.cf](https://vspd.bass.cf/) by {} and [dcrhive.com](https://dcrhive.com/) by @kozel. { Recap of plans in https://www.reddit.com/r/decred/comments/vt0wrt/dcr_hive_a_new_lowish_fee_vsp_coming_to_your/ }
 
-[jz says](https://matrix.to/#/!lDZCzVQjFoJsXMPkvr:decred.org/$XSPP3KlRoIcNt3cqBG9ZbgTnwu88Kr6VcwPDTNEGZo4?via=decred.org&via=matrix.org&via=planetdecred.org) Binance has finally reduced required DCR confs from 20 to 6.
-
-{ investigate if its worth coverage https://twitter.com/NOWNodes/status/1534180320601378821 }
+Binance has reduced required [DCR confirmations](https://matrix.to/#/!lDZCzVQjFoJsXMPkvr:decred.org/$XSPP3KlRoIcNt3cqBG9ZbgTnwu88Kr6VcwPDTNEGZo4?via=decred.org&via=matrix.org&via=planetdecred.org) from 20 to 6 according to @jz.
 
 [BisonPool](https://bisonpool.org/) has officially launched. BisonPool is a new kind of proof-of-stake pool which enables all Decred holders to earn PoS rewards, even if they cannot afford a whole ticket on their own. To make this possible, BisonPool pools user's DCR to purchase tickets. The ticket rewards are split among participants based on the amount of DCR they were able to provide. See the [announcement on Reddit](https://www.reddit.com/r/decred/comments/vyydm1/bisonpool_is_now_live/).
 
