Media DM update from phoenixgreen

--- a/journal/202207.md
+++ b/journal/202207.md
@@ -328,7 +328,13 @@ Secured the following news articles:
 
 ## Media
 
-{ _Put notable community content efforts or new projects at the beginning. e.g. a new website, new podcast series, or an important guide how to make the network more robust._ }
+[Decred Magazine](https://www.decredmagazine.com/) update:
+
+> In July we published 10 new articles and added all previous "Decred Assembly" content to the archive. We have a new Official Contributor - Tivra.
+> 
+> DM now has 297 posts, 50 newsletter subscribers, 6 active social media campaigns. I'm not sure how to show the full social media engagement, but according to my stats over the last 30 days there have been 48 new posts, 309 clicks on posts, 375 likes, 56 retweets, content was posted to 887 followers across all accounts. \[@phoenixgreen\]
+
+Authors wanted! Contact @phoenixgreen in Matrix [#writers](https://chat.decred.org/#/room/#writers:decred.org) chat or [@DecredSociety](https://twitter.com/DecredSociety) on Twitter.
 
 { _Hint: For bullet lists below, use the following format: [Sentence case title]({link}) by @author - optional comment._ }
 
@@ -423,7 +429,7 @@ Most information from third parties is relayed directly from the source after a 
 
 Credits (alphabetical order):
 
-- writing, editing, publishing: { bee, bochinchero, Exitus, jz, l1ndseymm, richardred }
+- writing, editing, publishing: { bee, bochinchero, Exitus, jz, l1ndseymm, phoenixgreen, richardred }
 - reviews and feedback: { buck54321 }
 - title image: {}
 - funding: Decred stakeholders
