Add Dev interviews to #people

--- a/journal/202207.md
+++ b/journal/202207.md
@@ -228,16 +228,15 @@ _[dcrweb](https://github.com/decred/dcrweb) is the source code for the decred.or
 
 ## People
 
-{ _Discover and greet new non-developer contributors too._ }
-
 Congratulations to new contractors granted the Decred Contractor Clearance (DCC) in May-June:
 
 - @philemon (GitHub [@ukane-philemon](https://github.com/ukane-philemon), Development)
 - @zippycorners (GitHub [@matthawkins90](https://github.com/matthawkins90), Development)
 
-{ _Status updates from existing contractors._ }
+Developer Inerviews:
 
-{ _Interviews with contributors. Link to #media for generic references (e.g. "Check the 3 interviews with devs") or link directly when referencing a specific interview._ }
+- [Decred Developer @dreacot](https://www.decredmagazine.com/introducing-decred-developer-dreacot/) who works on GoDCR was Interviewed by @PhoenixGreen on Decred Magazine
+- [Decred Developer @VictorGuedes](https://www.decredmagazine.com/introducing-decred-developer-victorguedes/) who works on Politeia was Interviewed by @PhoenixGreen on Decred Magazine
 
 Community stats as of Aug 1 (compared to Jul 1):
 
@@ -346,8 +345,6 @@ Authors wanted! Contact @phoenixgreen in Matrix [#writers](https://chat.decred.o
 
 - [Indecision, doubt, and a monthly dose of hopium](https://www.decredmagazine.com/indecision-doubt-and-a-monthly-dose-of-hopium/) Technical Analysis by @Applesaucesome
 - [Sound Money that Iterates and Evolves](https://www.decredmagazine.com/decred-iterates-where-bitcoin-is-weak-broken/) by @RonnieAmato
-- [Introducing Decred Developer @dreacot](https://www.decredmagazine.com/introducing-decred-developer-dreacot/) Interview by @PhoenixGreen
-- [Introducing Decred Developer @VictorGuedes](https://www.decredmagazine.com/introducing-decred-developer-victorguedes/) Interview by @PhoenixGreen
 - [Magic 8 ball, is this the bottom?](https://www.decredmagazine.com/magic-8-ball-is-this-the-bottom/) Technical Analysis by @Applesaucesome
 
 **Videos:**
