--- a/journal/202207.md
+++ b/journal/202207.md
@@ -233,10 +233,10 @@ Congratulations to new contractors granted the Decred Contractor Clearance (DCC)
 - @philemon (GitHub [@ukane-philemon](https://github.com/ukane-philemon), Development)
 - @zippycorners (GitHub [@matthawkins90](https://github.com/matthawkins90), Development)
 
-Developer Inerviews:
+Developer Interviews:
 
-- [Decred Developer @dreacot](https://www.decredmagazine.com/introducing-decred-developer-dreacot/) who works on GoDCR was Interviewed by @PhoenixGreen on Decred Magazine
-- [Decred Developer @VictorGuedes](https://www.decredmagazine.com/introducing-decred-developer-victorguedes/) who works on Politeia was Interviewed by @PhoenixGreen on Decred Magazine
+- [Decred Developer @dreacot](https://www.decredmagazine.com/introducing-decred-developer-dreacot/) who works on GoDCR was Interviewed by @PhoenixGreen on Decred Magazine.
+- [Decred Developer @VictorGuedes](https://www.decredmagazine.com/introducing-decred-developer-victorguedes/) who works on Politeia was Interviewed by @PhoenixGreen on Decred Magazine.
 
 Community stats as of Aug 1 (compared to Jul 1):
 
