Media add interviews for now, need to think

--- a/journal/202207.md
+++ b/journal/202207.md
@@ -348,9 +348,11 @@ Authors wanted! Contact @phoenixgreen in Matrix [#writers](https://chat.decred.o
 
 **Decred Magazine**
 
-- [Magic 8 ball, is this the bottom?](https://www.decredmagazine.com/magic-8-ball-is-this-the-bottom/) Technical Analysis by @Applesaucesome { _this may better fit Markets, or both here and Markets_ }
+- [Introducing Decred Developer @dreacot](https://www.decredmagazine.com/introducing-decred-developer-dreacot/) by @phoenixgreen { _keep for now and think whether to put only in Media or People, or dupe in both_ }
+- [Magic 8 ball, is this the bottom?](https://www.decredmagazine.com/magic-8-ball-is-this-the-bottom/) Technical Analysis by @Applesaucesome { _keep for now and think whether to put only in Media or Markets, or dupe in both_ }
+- [Introducing Decred Developer VictorGuedes](https://www.decredmagazine.com/introducing-decred-developer-victorguedes/) by @phoenixgreen { _keep for now and think whether to put only in Media or People, or dupe in both_ }
 - [Sound Money that Iterates and Evolves](https://www.decredmagazine.com/decred-iterates-where-bitcoin-is-weak-broken/) by @RonnieAmato
-- [Indecision, doubt, and a monthly dose of hopium](https://www.decredmagazine.com/indecision-doubt-and-a-monthly-dose-of-hopium/) Technical Analysis by @Applesaucesome { _this may better fit Markets, or both here and Markets_ }
+- [Indecision, doubt, and a monthly dose of hopium](https://www.decredmagazine.com/indecision-doubt-and-a-monthly-dose-of-hopium/) Technical Analysis by @Applesaucesome { _keep for now and think whether to put only in Media or Markets, or dupe in both_ }
 
 **Videos:**
 
@@ -391,6 +393,11 @@ Selected Twitter discussions:
 ## Markets
 
 In July DCR was trading between USD 20.86-29.10 / BTC 0.001037-0.001342. The average daily rate was $23.93.
+
+Analysis by @Applesauceseome { _reword into 1 para_ }:
+
+- [Magic 8 ball, is this the bottom?](https://www.decredmagazine.com/magic-8-ball-is-this-the-bottom/)
+- [Indecision, doubt, and a monthly dose of hopium](https://www.decredmagazine.com/indecision-doubt-and-a-monthly-dose-of-hopium/)
 
 { _DCRDEX updates, esp. trading volume dynamics._ }
 
