--- a/journal/202207.md
+++ b/journal/202207.md
@@ -363,7 +363,7 @@ Livestream:
 **Art and fun:**
 
 - [Decred stairs to evolve and adapt](https://www.decredmagazine.com/decred-stairs-to-evolve-and-adapt/) by @OfficialCryptos
-- [Decred's StakeShuffle Mixing](https://twitter.com/karamblez/status/1551637047038853122 statistic animation by @karamble
+- [Decred's StakeShuffle Mixing](https://twitter.com/karamblez/status/1551637047038853122) statistic animation by @karamble
 
 **Translations:**)
 
