--- a/journal/202207.md
+++ b/journal/202207.md
@@ -228,6 +228,11 @@ _[dcrweb](https://github.com/decred/dcrweb) is the source code for the decred.or
 - [Social media](https://decred.org/community/) links were [cleaned up](https://github.com/decred/dcrweb/pull/1052). Notably, Chinese specific social media has been removed due to a lack of control and proper moderation over these channels.
 
 
+### Other
+
+To a community question "What would you like to see Decred develop next?" @jy-p [dropped a teaser](https://www.youtube.com/watch?v=1RBBNnrPqc0&t=2462): "This one has a nuanced answer. I've developed it, and it's almost ready, and it fills a gap that we've had for a very long time, and it involves Lightning Network. I'm not gonna say a whole lot else. You can think about it like this. There's a whole bunch of problems around us today. There is one of them that makes me absolutely crazy and I'm going to try and address it.". Whatever it is, the remaining integration and GUI work was roughly estimated as "2 months".
+
+
 ## People
 
 Congratulations to new contractors granted the Decred Contractor Clearance (DCC) in May-June:
