--- a/journal/202207.md
+++ b/journal/202207.md
@@ -144,30 +144,41 @@ _[cspp](https://github.com/decred/cspp) is a server for coordinating coin mixes 
 
 _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecting exchange for trustless trading, powered by atomic swaps._
 
-{ _Group by topic_ }
+General user-facing changes:
 
-- Optimized [high resource use](https://github.com/decred/dcrdex/pull/1684) when typing price.
-- Fixed creating native BTC wallet with [too small fee](https://github.com/decred/dcrdex/pull/1657).
-- Added a short delay for [sending ZEC](https://github.com/zcash/zcash/issues/6045) after a block is mined in load tests, to workaround an issue with Zcash [output selection](https://github.com/zcash/zcash/issues/6045).
+- Display [fiat equivalents](https://github.com/decred/dcrdex/pull/1600) in various places of the UI.
+- Added general support for [live wallet reconfiguration](https://github.com/decred/dcrdex/pull/1686) and implemented it for BTC. This allows locked coins to be re-established after wallet configuration was changed. Prior to this change, reconfiguring a wallet with live orders was unlocking the funds but attempting to use them resulted in an error.
+- Implemented [fee rate caching and expiry](https://github.com/decred/dcrdex/pull/1721) to resolve a long-standing issue of using outdated fee rate. Also optimized how frequent fee rate is fetched from various sources (wallet, order book, external API).
 - Clarified the message about [disabling a DEX server](https://github.com/decred/dcrdex/pull/1634). With the recent account discovery features, a server can be disabled and reenabled as needed without paying the registration fee again.
-- Fixed native BTC SPV wallet getting wrecked after [sending too small](https://github.com/decred/dcrdex/pull/1705) ("dust") amount, which should not be allowed.
+- Optimized [high resource use](https://github.com/decred/dcrdex/pull/1684) when typing price.
+- Fixed [Filled percentage](https://github.com/decred/dcrdex/pull/1711) display for market buys.
+- Fixed users getting [order completion credit](https://github.com/decred/dcrdex/pull/1707) for revoked orders in rare circumstances.
+
+General internal/other changes:
+
 - Enforced [code formatting](https://github.com/decred/dcrdex/pull/1699) check during CI builds for consistency.
+- Test infrastructure improvements { 1691 1743 1745 }
+- Other ~3 improvements { 1694 1709 1723 } and ~5 fixes { 1704 1713 1729 1746 1740 }
+
+Decred support:
+
+- Support [external source](https://github.com/decred/dcrdex/pull/1654) of transaction fee estimates for DCR wallets (dcrdata's Insight API), to serve as a fallback when the wallet cannot get the fee estimate locally.
+- Fixed block monitoring for DCR SPV wallets and improved [connectivity error messages](https://github.com/decred/dcrdex/pull/1701).
+
+Bitcoin and Bitcoin-like asset support:
+
+- Added support for common [Electrum SPV](https://github.com/decred/dcrdex/pull/1607) wallets (BTC, LTC, BCH). DEX client can communicate with a local Electrum wallet (min version 4.2) and use its funds for trading.
+- Added a short delay for [sending ZEC](https://github.com/zcash/zcash/issues/6045) after a block is mined in load tests, to workaround an issue with Zcash [output selection](https://github.com/zcash/zcash/issues/6045).
+- Minimum required [Bitcoin Core version](https://github.com/decred/dcrdex/pull/1735) bumped to v0.21 (and v22 for using descriptor wallets).
+- Fixed native BTC SPV wallet getting wrecked after [sending too small](https://github.com/decred/dcrdex/pull/1705) ("dust") amount, which should not be allowed.
+- Fixed creating native BTC wallet with [too small fee](https://github.com/decred/dcrdex/pull/1657).
+
+Ethereum support:
+
 - Increase ETH [gas fee cap](https://github.com/decred/dcrdex/pull/1692) for redemptions when base fee is too high.
 - Added ability to [export ETH wallet](https://github.com/decred/dcrdex/pull/1648) to Metamask.
-- Fixed block monitoring for DCR SPV wallets and improved [connectivity error messages](https://github.com/decred/dcrdex/pull/1701).
-- Fixed [Filled percentage](https://github.com/decred/dcrdex/pull/1711) display for market buys.
-- Added general support for [live wallet reconfiguration](https://github.com/decred/dcrdex/pull/1686) and implemented it for BTC. This allows locked coins to be re-established after wallet configuration was changed. Prior to this change, reconfiguring a wallet with live orders was unlocking the funds but attempting to use them resulted in an error.
-- Fixed users getting [order completion credit](https://github.com/decred/dcrdex/pull/1707) for revoked orders in rare circumstances.
-- Support [external source](https://github.com/decred/dcrdex/pull/1654) of transaction fee estimates for DCR wallets (dcrdata's Insight API), to serve as a fallback when the wallet cannot get the fee estimate locally.
-- Display [fiat equivalents](https://github.com/decred/dcrdex/pull/1600) in various places of the UI.
-- Added support for common [Electrum SPV](https://github.com/decred/dcrdex/pull/1607) wallets (BTC, LTC, BCH). DEX client can communicate with a local Electrum wallet (min version 4.2) and use its funds for trading.
-- Implemented [fee rate caching and expiry](https://github.com/decred/dcrdex/pull/1721) to resolve a long-standing issue of using outdated fee rate. Also optimized how frequent fee rate is fetched from various sources (wallet, order book, external API).
 - Changed how [ETH wallet's private key](https://github.com/decred/dcrdex/pull/1702) is derived to have an extra step where Ethereum BIP-39 mnemonic is generated, and then the private key is derived from that seed. This leaves the door open to exporting both the seed words and the account private key in the future.
-- Minimum required [Bitcoin Core version](https://github.com/decred/dcrdex/pull/1735) bumped to v0.21 (and v22 for using descriptor wallets).
 - Added a test for [arithmetic overflow](https://github.com/decred/dcrdex/pull/1722) in the Ethereum's Solidity contract. Starting with Solidity v0.8.0 the transaction _should_ be reverted automatically if there is an overflow. The test is added just in case Solidity version used in DCRDEX is somehow reduced below v0.8.0, or if future Solidity versions remove this protection. However unlikely that may be, it's better to be safe than sorry.
-
-- Testing improvements { 1691 1743 1745 }
-- Other improvements { 1694 1709 1723 } and fixes { 1704 1713 1729 1746 1740 }
 
 { image candidates: 1648 1600 1607  }
 
