--- a/journal/202207.md
+++ b/journal/202207.md
@@ -46,11 +46,11 @@ The work reported below has the "merged to master" status unless noted otherwise
 
 _[dcrd](https://github.com/decred/dcrd) is a full node implementation that powers Decred's peer-to-peer network around the world._
 
-- Fixed [broadcasting of winning tickets](https://github.com/decred/dcrd/pull/2968) when there are multiple next block candidates ("chain tips") and some of them do not yet have their block data available. Voting wallets connected to dcrd in such state were unable to re-start voting for blocks due to an error.
 - Removed [planetdecred.org seeders](https://github.com/decred/dcrd/pull/2974) for both mainnet and testnet as requested by their maintainer.
 - Private key generation [implemented directly](https://github.com/decred/dcrd/pull/2971) for the secp256k1 curve to replace the generic version in the standard library with any adaptor code it required. Not only is this implementation significantly more efficient, both in terms of execution speed and memory allocations, it also is theoretically more secure since it does not have the modulo bias the implementation in the standard lib does.
 - Significantly [optimized CPU mining](https://github.com/decred/dcrd/pull/2977) code that is useful for mining on testnet. Speed stat tracking code reworked to improve accuracy and performance. Before this change the hashrate was ~0.5 Mh/s and up to 2 cores could be used efficiently. Optimized code hashes at 1.2 Mh/s on a single core and over 10 Mh/s with 10 cores.
 - Reformatted [doc comments](https://github.com/decred/dcrd/pull/2976) in the entire repository with `gofmt` in the new Go 1.19. Doing it all at once in a single commit saves future commits from extra diff clutter.
+- Fixed [broadcasting of winning tickets](https://github.com/decred/dcrd/pull/2968) when there are multiple next block candidates ("chain tips") and some of them do not yet have their block data available. Voting wallets connected to dcrd in such state were unable to re-start voting for blocks due to an error.
 - Other improvements { 2969 2970 2972; drop after review }
 
 { image candidates: 2971 }
@@ -66,7 +66,7 @@ Ticketbuyer:
 
 - Do not attempt to [mix change](https://github.com/decred/dcrwallet/pull/2171) if CoinShuffle++ server is unset. 
 
-JSON-RPC:
+JSON-RPC and command-line use via `dcrctl`:
 
 - Fixed `signrawtransasction` command not seeing the provided [private keys](https://github.com/decred/dcrwallet/pull/2173) for signing P2PKH inputs.
 
@@ -100,14 +100,12 @@ Backend - tstore:
 Backend - `ticketvote` plugin:
 
 - Added the [timestamp](https://github.com/decred/politeia/pull/1653) of the last vote status change to the vote summary structure. This allows to pull less data when rebuilding the vote inventory.
-- Rewrote ticketvote [inventory cache](https://github.com/decred/politeia/pull/1649) with an improved API, better documentation, and saving data in the tstore database instead of the file system. { _maybe group with similar changes moving fs to tstore cache_ }
-- Moved the [vote summaries cache](https://github.com/decred/politeia/pull/1657) from the file system to the tstore provided plugin cache.
-- Rewrote the runoff vote [submissions cache](https://github.com/decred/politeia/pull/1658) and moved it from the file system to the tstore provided plugin cache.
-- Implemented the ticketvote plugin's [fsck function](https://github.com/decred/politeia/pull/1659) that rebuilds all of its caches.
+- Rewrote `ticketvote` [inventory cache](https://github.com/decred/politeia/pull/1649) with an improved API, better documentation, and saving data in the tstore database instead of the file system. Similarly, [vote summaries cache](https://github.com/decred/politeia/pull/1657) and [runoff vote submissions cache](https://github.com/decred/politeia/pull/1658) moved from the file system to the tstore provided plugin cache.
+- Implemented the `ticketvote` plugin's [fsck function](https://github.com/decred/politeia/pull/1659) that rebuilds all of its caches.
 
 Backend - legacy proposals:
 
-- Added an [`import` command](https://github.com/decred/politeia/pull/1632) to the legacypoliteia tool. It imports the JSON data into the tstore backend that was generated during the execution of the `convert` command. The two commands (`convert` and `import`) allow to migrate most data from the previous version of Politeia into the current version. Client and server signatures are not imported since they don't match the converted data. Some Trillian weirdness had to be investigated and addressed with extensive testing and workarounds.
+- Added an [`import` command](https://github.com/decred/politeia/pull/1632) to the `legacypoliteia` tool. It imports the JSON data into the tstore backend that was generated during the execution of the `convert` command. The two commands (`convert` and `import`) allow to migrate most data from the previous version of Politeia into the current version. Client and server signatures are not imported since they don't match the converted data. Some Trillian weirdness had to be investigated and addressed with extensive testing and workarounds.
 
 Backend - other changes:
 
@@ -116,7 +114,7 @@ Backend - other changes:
 - Code cleanup and packaging. { 1656, 1662, 1661, 1666; drop after review}
 - Various improvements, tweaking etc.
 
-politeaivoter command-line app:
+`politeaivoter` command-line app:
 
 - Consolidated [config error handling](https://github.com/decred/politeia/pull/1648) to cover more cases consistently.
 
